adds ClasspathResolver